# gtasa_vita

./: .gitignore  CHEATS.md  CMakeLists.txt  COOP.md  Default_controls.txt  LICENSE  MUSIC.md  README.md  SCRIPTS.md  TODO.md  cheatList.md  config.c  config.h  controls.txt  gfx_patch.c  gfx_patch.h  io_patch.c  io_patch.h  jni_patch.c  jni_patch.h  main.c  main.h  openal_patch.c  openal_patch.h  opengl_patch.c  opengl_patch.h  so_util.c  so_util.h
companion/: Makefile  main.cpp
gamefiles/: config.txt  controls.txt  x360_controls.txt
gamefiles/data/maps/leveldes/: seabed.ipl
libc_bridge/: Makefile  nids.yml
loader/: CMakeLists.txt  config.c  config.h  dialog.c  dialog.h  elf.h  fios.c  fios.h  gfx_patch.c  io_patch.c  io_patch.h  jni_patch.c  libc_bridge.h  main.c  main.h  mpg123_patch.c  mpg123_patch.h  openal_patch.c  openal_patch.h  opengl_patch.c  opengl_patch.h  scripts_patch.c  scripts_patch.h  so_util.c  so_util.h
loader/sce_sys/livearea/contents/: template.xml
sce_sys/livearea/contents/: template.xml
scripts/: ffmpeg_convert_gtasa.bat  patcher.py
